# mosura

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.claude/memory/: MEMORY.md  mosura-project.md  respect-plan-decisions.md
assets/: banner.txt
crates/mosura/: Cargo.toml
crates/mosura/examples/: dumpc.rs  perf_corpus.rs  trace.rs
crates/mosura/src/: ccompare.rs  conformance.rs  datatest.rs  golden.rs  lang.rs  lib.rs  oraclecache.rs  paths.rs  speccache.rs
crates/mosura/src/analysis/: analyzer.rs  cspec.rs  decompiler.rs  flowtype.rs  manager.rs  mod.rs  priority.rs  snapshot.rs  symbolic.rs
crates/mosura/src/analysis/analyzers/: demangler.rs  eh_frame.rs  external_jump.rs  mod.rs  noreturn.rs  shared_return.rs  switch.rs
crates/mosura/src/analysis/loader/: elf.rs  le.rs  mod.rs  mz.rs  pe.rs
crates/mosura/src/analysis/program/: address_set.rs  function.rs  listing.rs  memory.rs  mod.rs  reference.rs  symbol.rs
crates/mosura/src/decomp/: ccompare.rs  cfg.rs  cprint.rs  divrecover.rs  jumptable.rs  mod.rs  simplify.rs  ssa.rs  types.rs
crates/mosura/src/decompile/: action.rs  alias.rs  block.rs  build.rs  cast.rs  cfg.rs  circlerange.rs  condconst.rs  consume.rs  cover.rs  deadcode.rs  determinedbranch.rs  directwrite.rs  divopt.rs  dominator.rs  double.rs  expression.rs  float.rs  fspec.rs  funcdata.rs  heritage.rs  infertypes.rs  jumpbasic.rs  jumptable.rs  lanedivide.rs  merge.rs  mergesnip.rs  mod.rs  nzmask.rs  op.rs  opcode.rs  pipeline.rs  printc.rs  ptrarith.rs  recover.rs  rules.rs  scope.rs  space.rs  splitflow.rs  stackvars.rs  (+7 more)
crates/mosura/src/sleigh/: emu.rs  engine.rs  mod.rs  pcode.rs  sla.rs
crates/mosura/tests/: analysis_parity.rs  conformance_datatests.rs  coverage_aarch64.rs  coverage_x86_64.rs  datatest_score.rs  decomp_cfg.rs  decomp_compare.rs  decomp_emit.rs  decomp_ssa.rs  decomp_switch.rs  decompile_corpus.rs  disasm_6502.rs  disasm_golden.rs  disasm_x86_64.rs  ir_parity.rs  jumptable_recovery.rs  proto_recovery.rs  semantic_x86_64.rs  sla_decode.rs
crates/xtask/: Cargo.toml
docs/: analysis-port-plan.md  coverage.md  cspec-decompiler-brief.md  decompiler-bug-tm-clones-panic.md  decompiler-plan.md  floats-plan.md  le-loader-notes.md  multi-arch-plan.md  perf-log.md  port-plan.md  roadmap-100.md  switches-plan.md  task-backlog.md  testing-baseline.md  type-system-plan.md
goldens/analysis/: aarch64.loaded.snapshot  aarch64.snapshot  basic.loaded.snapshot  basic.snapshot  cnv.loaded.snapshot  comcom32.loaded.snapshot  comcom32.snapshot  cppsym.loaded.snapshot  cppsym.snapshot  freestanding.loaded.snapshot  freestanding.snapshot  switchtab.loaded.snapshot  switchtab.snapshot  war2.loaded.snapshot  war2.snapshot
goldens/disasm/: aarch64_ccmp.golden  aarch64_condconstsub.golden  aarch64_retspecial.golden  m6502_tiny.golden  (+9 more)
oracle/: analysis-capture.md  capture.cc  capture_trace.cc
scripts/: build-ghidra-dist.sh  capture-analysis.sh  setup-oracle.sh  trace-diff.py  trace-diff.sh
(+40 files in other folders)
